# prtbf

c-based/: CMakeLists.txt  proto2json.patch
c-based/doc/: README  how_build
c-based/patch/: protobuf-build  protobuf2json.c
c-based/src/: main.c  protobuf2json.c
cpp-based/: CMakeLists.txt  ComputationalLifeProtocol.proto  GenerateBindings.cmake
cpp-based/cpp/: ComputationalLifeProtocol.pb.cc  ComputationalLifeProtocol.pb.h  _DS_Store  main.cpp
cpp-based/examples/: 1_RequestOutletPressure.json  2_ProvideOutletPressure.json  3_ProvideOutletFlowAndInletPressure.json  4_March.json  5_RequestInletFlow.json  6_ProvideInletFlow.json  7_Stop.json
